<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/background"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:background="@drawable/bg_exit_frg"
	android:clickable="true"
	android:focusable="true">

	<com.google.android.material.card.MaterialCardView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="16dp"
		app:background="?android:windowBackground"
		app:cardCornerRadius="16dp"
		app:strokeColor="?attr/colorOnPrimary"
		app:strokeWidth="1dp">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/tvTitleExit"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?attr/colorPrimary"
				android:gravity="center"
				android:padding="4dp"
				android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
				android:textColor="?attr/colorOnPrimary"
				android:textSize="16sp"
				tools:text="@string/title_exit_logout" />

			<TextView
				android:id="@+id/tvMessage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="24dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="24dp"
				android:maxWidth="320dp"
				tools:text="@string/exit_alert_logout" />

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end"
				android:layout_margin="12dp"
				android:orientation="horizontal">

				<Button
					android:id="@+id/btnConfirmExit"
					style="?android:attr/buttonBarButtonStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAllCaps="false"
					android:textColor="?attr/colorOnPrimary"
					tools:text="@string/btn_logout" />

				<Button
					android:id="@+id/btnDeclineExit"
					style="@style/Widget.MaterialComponents.Button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:text="@string/btn_cancel"
					android:textAllCaps="false" />

			</LinearLayout>
		</LinearLayout>
	</com.google.android.material.card.MaterialCardView>
</FrameLayout>